[package]
name = "tardev-snapshotter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = ">=1.0"
async-stream = "0.3.2"
futures = "0.3.17"
serde_json = "1.0"
tonic = "0.8"
oci-distribution = { git = "https://github.com/krustlet/oci-distribution", rev = "1ba0d94a900a97aa1bcac032a67ea23766bcfdef" }
tokio = {version = "1.0", features = ["full"]}
containerd-snapshots = { path = "../rust-extensions/crates/snapshots/" }
sha2 = "0.10.6"
tarindex = { path = "./tarindex" }
part = { path = "./part" }
