[package]
name = "tardev-snapshotter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = ">=1.0"
async-stream = "0.3.2"
futures = "0.3.17"
serde_json = "1.0"
tonic = "0.8"
oci-distribution = { git = "https://github.com/krustlet/oci-distribution", rev = "1ba0d94a900a97aa1bcac032a67ea23766bcfdef" }
tokio = {version = "1.0", features = ["full"]}
tokio-stream = "0.1.8"
containerd-snapshots = { path = "../rust-extensions/crates/snapshots/" }
sha2 = "0.10.6"
tarindex = { path = "./tarindex" }
part = { path = "./part" }

block_util = { git="https://github.com/cloud-hypervisor/cloud-hypervisor.git", rev = "a7dccf94cfcf411d20d9f369cba641b214668623" }
env_logger = "0.9.3"
epoll = "4.3.1"
libc = "0.2.137"
log = "0.4.17"
qcow = { git="https://github.com/cloud-hypervisor/cloud-hypervisor.git", rev = "a7dccf94cfcf411d20d9f369cba641b214668623" }
vhost = { version = "0.5.0", features = ["vhost-user-slave"] }
vhost-user-backend = "0.7.0"
virtio-bindings = "0.1.0"
virtio-queue = "0.6.1"
vm-memory = "0.9.0"
vmm-sys-util = "0.10.0"
